# galaxy-agents

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: build-push.yaml
agents/sentinel/: checks.py  digest.py  investigate.py  system.md
shared/: config.py
shared/llm/: provider.py
shared/tools/: cluster.py  dns.py  endpoints.py  logs.py  metrics.py  slack.py
src/: __main__.py  runner.py
