[project]
name = "galaxy-agents"
version = "0.1.0"
description = "AI monitoring agents for the Galaxy Kubernetes cluster"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "dnspython>=2.7",
    "kubernetes>=31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
